--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ gpxpy = "=1.3.4"
 gunicorn = "^20.1"
 humanize = "^3.5.0"
 psycopg2-binary = "^2.8"
+pycryptodome = "^3.9.9"
 pyjwt = "^2.1"
 python-forecastio = "^1.4"
 pytz = "^2021.1"
