--- a/.env.docker
+++ b/.env.docker
@@ -1,26 +1,26 @@
 # Custom variables initialisation
 
 # Application
-export FLASK_APP=fittrackee/__main__.py
+FLASK_APP=fittrackee/__main__.py
 # export HOST=
 # export PORT=
-export APP_SETTINGS=fittrackee.config.DevelopmentConfig
-export APP_SECRET_KEY='just for test'
+APP_SETTINGS=fittrackee.config.DevelopmentConfig
+APP_SECRET_KEY='just for test'
 # export APP_WORKERS=
-export APP_LOG=fittrackee.log
-export UPLOAD_FOLDER=/usr/src/app/uploads
+APP_LOG=fittrackee.log
+UPLOAD_FOLDER=/usr/src/app/uploads
 
 # Database
-export DATABASE_URL=postgresql://fittrackee:fittrackee@fittrackee-db:5432/fittrackee
-export DATABASE_TEST_URL=postgresql://fittrackee:fittrackee@fittrackee-db:5432/fittrackee_test
-export DATABASE_DISABLE_POOLING=
+DATABASE_URL=postgresql://fittrackee:fittrackee@fittrackee-db:5432/fittrackee
+DATABASE_TEST_URL=postgresql://fittrackee:fittrackee@fittrackee-db:5432/fittrackee_test
+DATABASE_DISABLE_POOLING=
 
 # Emails
-export UI_URL=http://0.0.0.0:5000
-export EMAIL_URL=smtp://none:none@mail:1025
-export SENDER_EMAIL=fittrackee@example.com
-export REDIS_URL=redis://redis:6379
-export WORKERS_PROCESSES=2
+UI_URL=http://0.0.0.0:5000
+EMAIL_URL=smtp://none:none@mail:1025
+SENDER_EMAIL=fittrackee@example.com
+REDIS_URL=redis://redis:6379
+WORKERS_PROCESSES=2
 
 # Activities
 #export TILE_SERVER_URL=
